Added swagger to all endpoints. Refactored responses
