# internal/api/controller/get_me_controller/get_me_controller.go
@@ -7,6 +7,18 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
+// GetMe godoc
+//
+// @Summary			  Get user info
+// @Accept			  application/json
+// @Produce			  application/json
+// @Tags			    Auth
+// @Security			BearerAuth
+// @Success			  200 {object} UserResponse
+// @Failure			  401 {object} api.ErrorResponse
+// @Failure			  401 {object} api.ErrorResponse
+// @Failure			  404 {object} api.ErrorResponse
+// @Router			  /auth/me [get]
 func (controller *getMeController) GetMe(ctx *gin.Context) {
 	userUntyped, _ := ctx.Get("user")
 	user, _ := userUntyped.(*authservice.User)
