# internal/api/controller/sign_up_controller/sign_up_controller.go
@@ -9,6 +9,19 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
+// SignUp godoc
+//
+// @Summary     Sign up user
+// @Tags        Auth
+// @Accept      application/json
+// @Produce     application/json
+// @Param       account body SignUpRequest true "Sign up request"
+// @Success     201 {object} SignUpResponse
+// @Failure     400 {object} api.ErrorResponse
+// @Failure     409 {object} api.ErrorResponse
+// @Failure     422 {object} api.ErrorResponse
+// @Failure     500 {object} api.ErrorResponse
+// @Router      /auth/sign-up [post]
 func (controller *signUpController) SignUp(ctx *gin.Context) {
 	var body SignUpRequest
 
